# sysdoctor-offline-ml-inference-onnx-runtime-v2

./: CMakeLists.txt  README.md  main.cpp  rules.json  rules_config.cpp
